        Assertion failures in checkEncodedString when running WebKit2 tests         https://bugs.webkit.org/show_bug.cgi?id=67425         <rdar://problem/11043492>

Reviewed by Anders Carlsson.

        * platform/network/cf/ResourceErrorCF.cpp: (WebCore::ResourceError::cfError):
        * platform/network/mac/ResourceErrorMac.mm: (WebCore::ResourceError::nsError):
        The failing URL is certainly not guaranteed to be valid, so it's not correct to put it back
        into a URL as if it's been normalized by KURL.



Canonical link: https://commits.webkit.org/98444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110882 268f45cc-cd09-0410-ab3c-d52691b4dbfc